security_gruop.tf
resource "aws_default_security_group" "sandbox" {
  vpc_id = aws_vpc.sandbox.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = []
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = []
  }

  tags = {
    Name = "sg-sandbox-default-disabled"
  }
}

resource "aws_security_group" "sandbox" {
  vpc_id = aws_vpc.sandbox.id

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  name = "SandboxSecurityGroup"

  tags = {
    Name = "sg-sandbox"
  }
}
